--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -42,7 +42,7 @@
                 <ul>
                     <li><a href="#intro">Exchange Crypt0</a></li>
                     <li><a href="#one">Exchange</a></li>
-                    <li><a href="#two">What we do</a></li>
+                    <li><a href="#two">Our Network</a></li>
                     <li><a href="#three">Get in touch</a></li>
                 </ul>
             </nav>
@@ -70,176 +70,81 @@
             </div>
         </section>
 
-        <!-- One -->
-        <section id="one" class="wrapper style2 spotlights">
-            <section>
-                <div class="content">
-                    <div class="inner">
-                        <h2>Bitcoin</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-                        <ul class="actions">
-                            <li><a href="https://changelly.com/widget/v1?auth=email&from=BTC&to=ETH&merchant_id=364cf72e9f09&address=&amount=1&ref_id=364cf72e9f09&color=00cf70"
-                                   target="_blank" class="button changellyButton">Convert BTC</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="content">
-                    <div class="inner">
-                        <h2>Ethereum</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-                        <ul class="actions">
-                            <li><a href="https://changelly.com/widget/v1?auth=email&from=ETH&to=BTC&merchant_id=364cf72e9f09&address=&amount=1&ref_id=364cf72e9f09&color=00cf70"
-                                   target="_blank" class="button changellyButton">Convert ETH</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="content">
-                    <div class="inner">
-                        <h2>Ultricies aliquam</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-                        <ul class="actions">
-                            <li><a href="#" class="button">Learn more</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="content">
-                    <div class="inner">
-                        <h2>Ultricies aliquam</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-                        <ul class="actions">
-                            <li><a href="#" class="button">Learn more</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="content">
-                    <div class="inner">
-                        <h2>Ultricies aliquam</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-                        <ul class="actions">
-                            <li><a href="#" class="button">Learn more</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="content">
-                    <div class="inner">
-                        <h2>Ultricies aliquam</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-                        <ul class="actions">
-                            <li><a href="#" class="button">Learn more</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="content">
-                    <div class="inner">
-                        <h2>Ultricies aliquam</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-                        <ul class="actions">
-                            <li><a href="#" class="button">Learn more</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="content">
-                    <div class="inner">
-                        <h2>Ultricies aliquam</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-                        <ul class="actions">
-                            <li><a href="#" class="button">Learn more</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="content">
-                    <div class="inner">
-                        <h2>Ultricies aliquam</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-                        <ul class="actions">
-                            <li><a href="#" class="button">Learn more</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="content">
-                    <div class="inner">
-                        <h2>Ultricies aliquam</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-                        <ul class="actions">
-                            <li><a href="#" class="button">Learn more</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="content">
-                    <div class="inner">
-                        <h2>Ultricies aliquam</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-                        <ul class="actions">
-                            <li><a href="#" class="button">Learn more</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-        </section>
-
         <!-- Two -->
-        <section id="two" class="wrapper style3 fade-up">
+        <section id="one" class="wrapper style3 fade-up">
             <div class="inner">
                 <h2>What we do</h2>
                 <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
                 <div class="features">
-                    <section>
-                        <span class="icon major fa-code"></span>
-                        <h3>Lorem ipsum amet</h3>
-                        <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-                    </section>
-                    <section>
-                        <span class="icon major fa-lock"></span>
-                        <h3>Aliquam sed nullam</h3>
-                        <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-                    </section>
-                    <section>
-                        <span class="icon major fa-cog"></span>
-                        <h3>Sed erat ullam corper</h3>
-                        <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-                    </section>
-                    <section>
-                        <span class="icon major fa-desktop"></span>
-                        <h3>Veroeros quis lorem</h3>
-                        <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-                    </section>
-                    <section>
-                        <span class="icon major fa-chain"></span>
-                        <h3>Urna quis bibendum</h3>
-                        <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-                    </section>
-                    <section>
-                        <span class="icon major fa-diamond"></span>
-                        <h3>Aliquam urna dapibus</h3>
-                        <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-                    </section>
+                    {% for ticker in getCoinTicker() %}
+                        <section>
+                            <img height="32" width="32" class="icon major ticker-img mr-1"
+                                 src="https://files.coinmarketcap.com/static/img/coins/32x32/{{ slugify(ticker.name) }}.png"
+                                 alt="">
+                            <h3>{{ ticker.name }}</h3>
+                            <ul class="actions">
+                                <li>
+                                    <a href="https://changelly.com/widget/v1?auth=email&from=BTC&to=ETH&merchant_id=364cf72e9f09&address=&amount=1&ref_id=364cf72e9f09&color=00cf70"
+                                       target="_blank" class="button changellyButton">Convert {{ ticker.symbol }}</a>
+                                </li>
+                            </ul>
+                        </section>
+
+                    {% endfor %}
+
                 </div>
-                <ul class="actions">
-                    <li><a href="#" class="button">Learn more</a></li>
-                </ul>
+                {#<ul class="actions">#}
+                    {#<li><a href="#" class="button">Learn more</a></li>#}
+                {#</ul>#}
             </div>
         </section>
 
+        <!-- One -->
+        <section id="two" class="wrapper style2 spotlights">
+
+            <section>
+                <div class="content">
+                    <div class="inner">
+                        <h2>24HourCrypto</h2>
+
+                        <ul class="actions">
+                            <li>
+                                <a href="https://24hourcrypto.com"
+                                   target="_blank" class="button changellyButton">View  24HourCrypto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="content">
+                    <div class="inner">
+                        <h2>CryptoScreener</h2>
+
+                        <ul class="actions">
+                            <li>
+                                <a href="https://cryptoscreener.com"
+                                   target="_blank" class="button changellyButton">View  CryptoScreener</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="content">
+                    <div class="inner">
+                        <h2>Cryptix</h2>
+
+                        <ul class="actions">
+                            <li>
+                                <a href="https://cryptix.com"
+                                   target="_blank" class="button changellyButton">View Cryptix</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+        </section>
         <!-- Three -->
         <section id="three" class="wrapper style1 fade-up">
             <div class="inner">
