add append function

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -37,7 +37,7 @@
 
     <!-- Sidebar -->
     <section id="sidebar">
-        <div class="inner">
+        <div class="inner" id="sidebar-inner">
             <nav>
                 <ul>
                     <li><a href="#intro">Exchange Crypt0</a></li>
@@ -54,7 +54,7 @@
 
         <!-- Intro -->
         <section id="intro" class="wrapper style1 fullscreen fade-up">
-            <div class="inner d-flex justify-content-between mobile-col">
+            <div class="inner d-flex justify-content-between mobile-col" id="intro-inner">
                 <div class="left">
                     <h1>Exchange Crypt0</h1>
                     <p>The quick, simple and easy way to exchange Bitcoin & Alt Coins.</p>
